<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Quiz App</string>
    <string name="first">1.  this is the first sample question</string>
    <string name="sec">2.  this is the second sample question</string>
    <string name="third">3.  Do you know that it is wonderful to type dummy text</string>
    <string name="forth">4.  it is so awesome to</string>
    <string name="fifth">5.  I feel good, tarararararara</string>
    <string name="first_ans">Is it true</string>
    <string name="first_ans_2">maybe you would know what i am talking about</string>
    <string name="first_ans_3">yezzir</string>
    <string name="sec_ans">no be small thing</string>
    <string name="sec_ans_2">this is the way we huzzle</string>
    <string name="sec_ans_3">this is the way to code</string>
    <string name="third_ans">true true true</string>
    <string name="third_ans_2">non of the aforementioned</string>
    <string name="third_ans_3">all of the aforementioned</string>
    <string name="forth_ans">what is your name</string>
    <string name="forth_ans_2">I\'m the baddest boss in calabar</string>
    <string name="forth_ans_3">This is the way we roll</string>
    <string name="fifth_ans">Not certain</string>
    <string name="fifth_ans_2">Maybe it is possible</string>
    <string name="fifth_ans_3">Definitely not going to be possible</string>
    <string name="welcome">Your Welcome: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="sixth">6.  Once in a while i love to</string>
    <string name="sixth_ans">make myself at home by exercising</string>
    <string name="sixth_ans_2">travel all around the world</string>
    <string name="sixth_ans_3">do some crazy things all by myself</string>
</resources>
